# Craigslist_Web_Scraping

./: Procfile  README.md  pyproject.toml  requirements.txt
Craiglist/: Procfile  db.sqlite3  manage.py  requirements.txt
Craiglist/Craiglist/: asgi.py  settings.py  urls.py  wsgi.py
Craiglist/my_app/: admin.py  models.py  urls.py  views.py
Craiglist/my_app/migrations/: 0001_initial.py  0002_auto_20201222_1313.py
Craiglist/my_app/templates/: base.html
Craiglist/my_app/templates/my_app/: new_search.html
