[tool.poetry]
name = "craigslist_web_scraping"
version = "0.1.0"
description = "Craiglist Web scraping website"
authors = ["Sergey Vengilevskiy <NeoVic2006@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
